[package]
name = "xgboost"
version = "0.1.1"
authors = ["Dave Challis <dave@suicas.net>"]
license = "MIT"
repository = "https://github.com/davechallis/rust-xgboost"
homepage = "https://github.com/davechallis/rust-xgboost"
description = "Machine learning using XGBoost"
documentation = "https://docs.rs/xgboost"

[dependencies]
xgboost-sys = "0.1"
libc = "0.2"
derive_builder = "0.5"
log = "0.4"
tempfile = "3.0"
indexmap = "1.0"
