[package]
name = "xgboost"
version = "0.2.0"
authors = ["Dave Challis <dave@suicas.net>"]
license = "MIT"
repository = "https://github.com/davechallis/rust-xgboost"
homepage = "https://github.com/davechallis/rust-xgboost"
description = "Machine learning using XGBoost"
documentation = "https://docs.rs/xgboost"
readme = "README.md"

[dependencies]
xgboost-sys = { path = "xgboost-sys" }
libc = "0.2"
derive_builder = "0.12"
log = "0.4"
tempfile = "3.9"
indexmap = "2.1"

[features]
cuda = ["xgboost-sys/cuda"]
